@@ -89,6 +89,13 @@ contains some examples implemented in ATS that involve UNIX socket programming.
 <P>
 </MENU>
 
+<H3>Object-Oriented Programming</H3>
+<MENU>
+<LI>
+<A HREF="https://ats-lang.svn.sourceforge.net/svnroot/ats-lang/trunk/doc/EXAMPLE/OOP">OOP</A>
+contains some examples implemented in ATS that are of object-oriented programming style.
+</MENU>
+
 <H3>GUI Programming</H3>
 <MENU>
 <LI>
@@ -103,6 +110,14 @@ contains some examples implemented in ATS that involve the Xlib programming.
 -->
 <A HREF="GTK/GTK.html">GTK</A>
 contains some examples implemented in ATS that involve <A HREF="http://www.gtk.org">GTK</A> programming.
+<P>
+</MENU>
+
+<H3>Parallel Programming</H3>
+<MENU>
+<LI>
+<A HREF="MULTICORE/MULTICORE.html">MULTICORE</A>
+contains a set of examples in ATS that involve multicore-programming.
 <P>
 </MENU>
 
@@ -125,14 +140,6 @@ contains some examples implemented in ATS that involve OpenGL programming.
 contains some examples implemented in ATS that involve SDL programming.
 <P>
 
-</MENU>
-
-<H3>Parallel Programming</H3>
-<MENU>
-<LI>
-<A HREF="MULTICORE/MULTICORE.html">MULTICORE</A>
-contains a set of examples in ATS that involve multicore-programming.
-<P>
 </MENU>
 
 <H3>Theorem-Proving</H3>
