@@ -13,6 +13,9 @@ ats-lang-anairiats-0.2.3:
    structure to the C code generated by atsopt.
 7. Introducing block expressions: { decseq_syn }
 8. Supporting syndef-loaded external identifers
+9. DO and WHILE are external ids: both while-loop and do-while-loop are
+   supported.
+10. print! and println! are now supported.
 
 ########################################################################
 
